add user registration frames

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>reflections</artifactId>
             <version>0.10.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.10.0</version>
+        </dependency>
     </dependencies>
 
 </project>
