--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
             <artifactId>hibernate-core</artifactId>
             <version>7.1.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.33.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>2.0.16</version>
+        </dependency>
 
         <dependency>
             <groupId>org.hibernate.validator</groupId>
